plugins {
    id 'java-library'
    id 'maven-publish'
}

repositories {
    mavenLocal()
    mavenCentral()
}

dependencies {
    api libs.org.springframework.boot.spring.boot.starter.webflux
    api libs.org.springframework.boot.spring.boot.starter.aop
    api libs.org.springframework.boot.spring.boot.starter.oauth2.client
    api libs.org.springframework.boot.spring.boot.starter.oauth2.resource.server
    api libs.io.micrometer.micrometer.tracing.bridge.brave
    api libs.io.micrometer.micrometer.core
    api libs.io.projectreactor.addons.reactor.extra
    api libs.org.reflections.reflections
    api libs.io.minio.minio
    api libs.javax.xml.bind.jaxb.api
    api libs.javax.annotation.javax.annotation.api
    api libs.com.github.ben.manes.caffeine.caffeine
    api libs.org.springframework.boot.spring.boot.starter.data.r2dbc
    api libs.io.r2dbc.r2dbc.pool
    api libs.org.modelmapper.modelmapper
}

group = 'com.ezbuy'
version = '1.3.0'
description = 'ezbuy-core'

java.sourceCompatibility = JavaVersion.VERSION_21

java {
    withSourcesJar()
    withJavadocJar()
}

publishing {
    publications {
        maven(MavenPublication) {
            from(components.java)
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

tasks.withType(Javadoc).configureEach {
    options.encoding = 'UTF-8'
}
